# anchor-playground

./: Anchor.toml  Cargo.toml  package.json
programs/playground/: Cargo.toml
programs/playground/src/: lib.rs
programs/playground/src/instructions/: accept_pda_owned_by_system.rs  initialize_signer_and_payer.rs  initialize_space_zero.rs  mod.rs  set_inner_on_pda.rs  take_stake_account.rs
tests/: playground.ts
